Partida, da finire, CcliengHandler, Inizio...Server, inizio...client, ConfermaLogin